--- a/src/Services/CatalogService/CatalogService.Api/appsettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=catalog;Integrated Security=True"
 }
