--- a/src/Services/CatalogService/CatalogService.Api/appsettings.json
+++ b/src/Services/CatalogService/CatalogService.Api/appsettings.json
@@ -7,5 +7,12 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=catalog;Integrated Security=True"
+  "ConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=catalog;Integrated Security=True",
+
+  "CatalogSettings": {
+    "PicBaseUrl": "Pics/"
+  },
+  "ConsulConfig": {
+    "Address": "http://localhost:8500"
+  }
 }
