--- a/src/Services/CatalogService/CatalogService.Api/CatalogService.Api.csproj
+++ b/src/Services/CatalogService/CatalogService.Api/CatalogService.Api.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Consul" Version="1.6.10.6" />
 		<PackageReference Include="Polly" Version="7.2.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 
