--- a/src/Services/IdentityService/IdentityService.Api/Properties/launchSettings.json
+++ b/src/Services/IdentityService/IdentityService.Api/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7078;http://localhost:5078",
+      "applicationUrl": "http://localhost:5005;",
       "dotnetRunMessages": true
     },
     "IIS Express": {
