--- a/src/Services/OrderService/OrderService.Domain/OrderService.Domain.csproj
+++ b/src/Services/OrderService/OrderService.Domain/OrderService.Domain.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Abp" Version="7.2.1" />
+		<PackageReference Include="MediatR" Version="10.0.1" />
+	</ItemGroup>
 
 </Project>
