order service api commit

--- a/src/Services/OrderService/OrderService.Api/appsettings.json
+++ b/src/Services/OrderService/OrderService.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "OrderDbConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=order;Integrated Security=True",
+
+  "ConsulConfig": {
+    "Address": "http://localhost:8500/"
+  },
+  "AuthConfig": {
+    "Secret": "TechBuddySecretKeyShouldBeLong"
+  }
 }
