--- a/src/Services/OrderService/OrderService.Api/Properties/launchSettings.json
+++ b/src/Services/OrderService/OrderService.Api/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "OrderService.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7287;http://localhost:5287",
+      "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
