--- a/src/Services/PaymentService/PaymentService.Api/Properties/launchSettings.json
+++ b/src/Services/PaymentService/PaymentService.Api/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:12477",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:55646",
+      "sslPort": 44383
     }
   },
   "profiles": {
     "PaymentService.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7053;http://localhost:5053",
+      "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
